# iconic-visual-search

./: .gitignore  README.md  dataset_handler.py  main.py  pyproject.toml  spatio_chromatic_filters.py  visual_search.py
images/: annotations.json
